feat: 특강 신청 validation 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,4 +9,6 @@ spring:
     username: sa
     password: root
   jpa:
+    hibernate:
+      ddl-auto: create
     database-platform: org.hibernate.dialect.H2Dialect
